# manunetics-playground

./: README.md  brief.txt  gitignore  stuff
alpha/source/alpha-one/: main.c  makefile  math.c  notes.txt
alpha/source/alpha-three/: CMakeLists.txt  Makefile  info.txt  run.py
alpha/source/alpha-three/includes/: math.h
alpha/source/alpha-three/source/: main.c  math.c
alpha/source/alpha-two/: makefile
arduino-uno/sketch_jul4a/: sketch_jul4a.ino
beta/nucleo-c0/: CMakeLists.txt  arm-toolchain.cmake
beta/nucleo-c0/Core/Src/: main.c  stm32c0xx_it.c
beta/nucleo-c0/Drivers/STM32C0xx_HAL_Driver/Inc/: stm32c0xx_hal_def.h
beta/nucleo-c0/Drivers/STM32C0xx_HAL_Driver/Src/: stm32c0xx_hal.c  stm32c0xx_hal_flash_ex.c
saleae/: device_test.py  initial_test.py  saleae_config.json  test_config.py
saleae/output-2025-07-12_22-59-36/: capture.sal  uart_data.csv
saleae/output-2025-07-12_23-27-58/: capture.sal  uart_basic_data.csv
serial/: binary-echo.py  buffer-ack.py  spoon-gui.py  spoon1.py  uart-echo.py  working bootloader.txt  working-boot-linker-script  working-booted-app.txt
